Introduce quarkus-cache extension

--- a/bom/deployment/pom.xml
+++ b/bom/deployment/pom.xml
@@ -564,6 +564,11 @@
                 <artifactId>quarkus-resteasy-qute-deployment</artifactId>
                 <version>${project.version}</version>
             </dependency>
+            <dependency>
+                <groupId>io.quarkus</groupId>
+                <artifactId>quarkus-cache-deployment</artifactId>
+                <version>${project.version}</version>
+            </dependency>
 
             <!-- Quarkus test dependencies -->
 
