Introduce quarkus-cache extension

--- a/extensions/pom.xml
+++ b/extensions/pom.xml
@@ -112,6 +112,7 @@
 
         <!-- Caching -->
         <module>caffeine</module>
+        <module>cache</module>
 
         <!-- Integrations -->
         <module>amazon-lambda</module>
