Init CXF extension
Add cxf server side extension
Docs
Unit tests

fix #4005

Co-authored-by: Olivier Dufour <olivier.duff@gmail.com>
Co-authored-by: Guillaume Dufour <guillaume.duff@gmail.com>

--- a/extensions/pom.xml
+++ b/extensions/pom.xml
@@ -55,6 +55,9 @@
         <module>smallrye-openapi</module>
         <module>swagger-ui</module>
 
+        <!-- Web services -->
+        <module>cxf</module>
+
         <!-- Reactive -->
         <module>mutiny</module>
         <module>vertx</module>
