--- a/extensions/pom.xml
+++ b/extensions/pom.xml
@@ -82,6 +82,7 @@
         <module>mongodb-client</module>
         <module>artemis-core</module>
         <module>artemis-jms</module>
+        <module>redis</module>
 
         <!-- Spring -->
         <module>spring-di</module>
