--- a/bom/deployment/pom.xml
+++ b/bom/deployment/pom.xml
@@ -564,6 +564,11 @@
             </dependency>
             <dependency>
                 <groupId>io.quarkus</groupId>
+                <artifactId>quarkus-redis-deployment</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.quarkus</groupId>
                 <artifactId>quarkus-vertx-graphql-deployment</artifactId>
                 <version>${project.version}</version>
             </dependency>
