--- a/bom/runtime/pom.xml
+++ b/bom/runtime/pom.xml
@@ -149,6 +149,7 @@
         <flyway.version>6.1.0</flyway.version>
         <yasson.version>1.0.5</yasson.version>
         <neo4j-java-driver.version>4.0.0-beta03</neo4j-java-driver.version>
+        <lettuce.version>5.2.0.RELEASE</lettuce.version>
         <mongo-client.version>3.10.2</mongo-client.version>
         <mongo-reactivestreams-client.version>1.11.0</mongo-reactivestreams-client.version>
         <artemis.version>2.10.1</artemis.version>
@@ -171,6 +172,7 @@
         <antlr.version>4.7.2</antlr.version>
         <quarkus-security.version>1.0.0.Final</quarkus-security.version>
         <keycloak.version>7.0.1</keycloak.version>
+        <rxjava-reactive-streams.version>1.2.1</rxjava-reactive-streams.version>
     </properties>
 
     <dependencyManagement>
@@ -587,6 +589,11 @@
             </dependency>
             <dependency>
                 <groupId>io.quarkus</groupId>
+                <artifactId>quarkus-redis</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.quarkus</groupId>
                 <artifactId>quarkus-undertow-websockets</artifactId>
                 <version>${project.version}</version>
             </dependency>
@@ -878,6 +885,16 @@
                 <groupId>io.reactivex</groupId>
                 <artifactId>rxjava</artifactId>
                 <version>${rxjava1.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.reactivex</groupId>
+                <artifactId>rxjava-reactive-streams</artifactId>
+                <version>${rxjava-reactive-streams.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.lettuce</groupId>
+                <artifactId>lettuce-core</artifactId>
+                <version>${lettuce.version}</version>
             </dependency>
             <dependency>
                 <groupId>io.opentracing</groupId>
