--- a/ci-templates/jvm-build-steps.yaml
+++ b/ci-templates/jvm-build-steps.yaml
@@ -17,7 +17,10 @@ steps:
 
 - script: docker run --rm --publish 8000:8000 --name build-dynamodb -d amazon/dynamodb-local:1.11.477
   displayName: 'start dynamodb'
- 
+
+- script: docker run --rm --publish 6379:6379 --name build-redis -d redis:5.0.6
+  displayName: 'start redis'
+
 - bash: |
     sudo service mysql stop || true
     docker run --rm --publish 3306:3306 --name build-mysql -e MYSQL_USER=hibernate_orm_test -e MYSQL_PASSWORD=hibernate_orm_test -e MYSQL_DATABASE=hibernate_orm_test -e MYSQL_RANDOM_ROOT_PASSWORD=true -e MYSQL_DATABASE=hibernate_orm_test -d mysql:5 --skip-ssl 
@@ -29,5 +32,4 @@ steps:
     goals: 'install'
     mavenOptions: $(MAVEN_OPTS)
     jdkVersionOption: ${{ parameters.jdk }}
-    options: '-B --settings azure-mvn-settings.xml -Dnative-image.docker-build -Dtest-postgresql -Dtest-elasticsearch -Dtest-mysql -Dtest-dynamodb -Dtest-vault -Dno-format ${{ parameters.extraf }}'
-
+    options: '-B --settings azure-mvn-settings.xml -Dnative-image.docker-build -Dtest-postgresql -Dtest-elasticsearch -Dtest-mysql -Dtest-dynamodb -Dtest-vault -Dtest-redis -Dno-format ${{ parameters.extraf }}'
