--- a/integration-tests/narayana-jta/pom.xml
+++ b/integration-tests/narayana-jta/pom.xml
@@ -36,6 +36,15 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <systemProperties>
+                        <CoordinatorEnvironmentBean.enableStatistics>true</CoordinatorEnvironmentBean.enableStatistics>
+                        <RecoveryEnvironmentBean.periodicRecoveryPeriod>60</RecoveryEnvironmentBean.periodicRecoveryPeriod>
+                    </systemProperties>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
     <profiles>
