Add test that http forwards to https when set to in the config.

--- a/extensions/vertx-http/deployment/src/test/resources/conf/disable-http.conf
+++ b/extensions/vertx-http/deployment/src/test/resources/conf/disable-http.conf
@@ -1,4 +1,4 @@
 # Enable SSL, configure the key store
-quarkus.http.port-enabled=false
-quarkus.http.ssl.certificate.key-store-file=server-keystore.jks
-quarkus.http.ssl.certificate.key-store-password=secret
+quarkus.http.redirect-insecure-requests=true
+quarkus.http.ssl.certificate.file=server-cert.pem
+quarkus.http.ssl.certificate.key-file=server-key.pem
