Security JPA implementation

--- a/extensions/pom.xml
+++ b/extensions/pom.xml
@@ -97,6 +97,7 @@
 
         <!-- Security -->
         <module>security</module>
+        <module>security-jpa</module>
         <module>elytron-security-common</module>
         <module>elytron-security</module>
         <module>elytron-security-jdbc</module>
