test (#5493) Add integration test that tests building and deploying to kubernetes.

--- a/bom/runtime/pom.xml
+++ b/bom/runtime/pom.xml
@@ -713,6 +713,11 @@
             </dependency>
             <dependency>
                 <groupId>io.quarkus</groupId>
+                <artifactId>quarkus-container</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.quarkus</groupId>
                 <artifactId>quarkus-kubernetes</artifactId>
                 <version>${project.version}</version>
             </dependency>
