OptaPlanner extension (initial commit, not yet graal-friendly)

--- a/bom/runtime/pom.xml
+++ b/bom/runtime/pom.xml
@@ -161,6 +161,7 @@
         <hibernate-quarkus-local-cache.version>0.1.0</hibernate-quarkus-local-cache.version>
         <kogito.version>0.6.1</kogito.version>
         <kubernetes-client.version>4.7.1</kubernetes-client.version>
+        <optaplanner.version>7.32.0-SNAPSHOT</optaplanner.version>
         <sundr.version>0.19.1</sundr.version> <!-- this is to avoid annoying pop-up in eclipse about failure to init Velocity logging -->
         <flapdoodle.mongo.version>2.2.0</flapdoodle.mongo.version>
         <wiremock.version>2.24.1</wiremock.version>
@@ -245,6 +246,13 @@
                 <groupId>org.kie.kogito</groupId>
                 <artifactId>kogito-bom</artifactId>
                 <version>${kogito.version}</version>
+                <scope>import</scope>
+                <type>pom</type>
+            </dependency>
+            <dependency>
+                <groupId>org.optaplanner</groupId>
+                <artifactId>optaplanner-bom</artifactId>
+                <version>${optaplanner.version}</version>
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
@@ -696,6 +704,11 @@
             <dependency>
                 <groupId>io.quarkus</groupId>
                 <artifactId>quarkus-kogito</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.quarkus</groupId>
+                <artifactId>quarkus-optaplanner</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
@@ -2547,6 +2560,11 @@
                 <groupId>org.kie.kogito</groupId>
                 <artifactId>jbpm-bpmn2</artifactId>
                 <version>${kogito.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.optaplanner</groupId>
+                <artifactId>optaplanner-core</artifactId>
+                <version>${optaplanner.version}</version>
             </dependency>
 
             <!-- Spring -->
