--- a/ci-templates/stages.yml
+++ b/ci-templates/stages.yml
@@ -410,6 +410,7 @@ stages:
           timeoutInMinutes: 35
           modules:
             - kogito
+            - optaplanner-jackson
             - kubernetes-client
             - quartz
             - qute
