--- a/extensions/pom.xml
+++ b/extensions/pom.xml
@@ -135,8 +135,10 @@
         <!-- Database migrations -->
         <module>flyway</module>
 
-        <!-- kogito -->
+        <!-- Business automation -->
         <module>kogito</module>
+        <module>optaplanner</module>
+        <module>optaplanner-jackson</module>
 
         <!-- vault -->
         <module>vault</module>
