--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -68,6 +68,7 @@
         <module>amazon-lambda-http-resteasy</module>
         <module>kogito</module>
         <module>kogito-maven</module>
+        <module>optaplanner-jackson</module>
         <module>kubernetes</module>
         <module>kubernetes-client</module>
         <module>tika</module>
