feat(quartz): add clustered jobs support
Fixes #3520

--- a/ci-templates/stages.yml
+++ b/ci-templates/stages.yml
@@ -349,6 +349,7 @@ stages:
           modules:
             - kogito
             - kubernetes-client
+            - quartz
           name: misc_3
 
       - template: native-build-steps.yaml
