upgrade of kogito to 0.7.1 plus required adjustments - Updated jandex proto generator to allow exclusion of static and transient, support simple types for collections - KOGITO-801 - Live/Hot reload does not work when adding a process definition to a skeleton project - upgrade kogito dependencies after internal refactoring - fix DMN path handling

--- a/extensions/kogito/deployment/pom.xml
+++ b/extensions/kogito/deployment/pom.xml
@@ -47,6 +47,12 @@
         <dependency>
             <groupId>org.kie.kogito</groupId>
             <artifactId>kogito-codegen</artifactId>
+            <exclusions>
+                <exclusion>
+                  <groupId>javax.validation</groupId>
+                  <artifactId>validation-api</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <!-- test -->
