--- a/extensions/kogito/runtime/pom.xml
+++ b/extensions/kogito/runtime/pom.xml
@@ -42,15 +42,11 @@
         </dependency>
         <dependency>
             <groupId>org.kie.kogito</groupId>
-            <artifactId>drools-core</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.kie.kogito</groupId>
-            <artifactId>drools-model-compiler</artifactId>
+            <artifactId>kogito-drools</artifactId>
             <exclusions>
                 <exclusion>
-                    <groupId>javax.annotation</groupId>
-                    <artifactId>javax.annotation-api</artifactId>
+                    <groupId>org.jboss.spec.javax.annotation</groupId>
+                    <artifactId>jboss-annotations-api_1.2_spec</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
