--- a/bom/runtime/pom.xml
+++ b/bom/runtime/pom.xml
@@ -744,7 +744,7 @@
             </dependency>
             <dependency>
                 <groupId>io.quarkus</groupId>
-                <artifactId>quarkus-qute-resteasy</artifactId>
+                <artifactId>quarkus-resteasy-qute</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
