--- a/bom/runtime/pom.xml
+++ b/bom/runtime/pom.xml
@@ -31,7 +31,7 @@
         <microprofile-opentracing-api.version>1.3.1</microprofile-opentracing-api.version>
         <microprofile-reactive-streams-operators.version>1.0</microprofile-reactive-streams-operators.version>
         <microprofile-rest-client.version>1.3.4</microprofile-rest-client.version>
-        <smallrye-config.version>1.4.1</smallrye-config.version>
+        <smallrye-config.version>1.5.0</smallrye-config.version>
         <smallrye-health.version>2.1.0</smallrye-health.version>
         <smallrye-metrics.version>2.3.1</smallrye-metrics.version>
         <smallrye-open-api.version>1.1.20</smallrye-open-api.version>
@@ -1092,7 +1092,21 @@
                 <version>${quarkus-security.version}</version>
             </dependency>
             <dependency>
+                <!-- NOTE: this dependency is here to cause relocations to work; DO NOT MODIFY -->
                 <groupId>io.smallrye</groupId>
+                <artifactId>smallrye-config</artifactId>
+                <!-- This is intentionally hard-coded -->
+                <version>1.5.0</version>
+            </dependency>
+            <dependency>
+                <!-- NOTE: this dependency is here to cause relocations to work; DO NOT MODIFY -->
+                <groupId>io.smallrye</groupId>
+                <artifactId>smallrye-config-common</artifactId>
+                <!-- This is intentionally hard-coded -->
+                <version>1.5.0</version>
+            </dependency>
+            <dependency>
+                <groupId>io.smallrye.config</groupId>
                 <artifactId>smallrye-config</artifactId>
                 <version>${smallrye-config.version}</version>
                 <exclusions>
@@ -1103,7 +1117,7 @@
                 </exclusions>
             </dependency>
             <dependency>
-                <groupId>io.smallrye</groupId>
+                <groupId>io.smallrye.config</groupId>
                 <artifactId>smallrye-config-common</artifactId>
                 <version>${smallrye-config.version}</version>
             </dependency>
