feat: Introduce GELF log handler

--- a/bom/deployment/pom.xml
+++ b/bom/deployment/pom.xml
@@ -511,6 +511,11 @@
                 <artifactId>quarkus-logging-sentry-deployment</artifactId>
                 <version>${project.version}</version>
             </dependency>
+            <dependency>
+                <groupId>io.quarkus</groupId>
+                <artifactId>quarkus-logging-gelf-deployment</artifactId>
+                <version>${project.version}</version>
+            </dependency>
 
             <dependency>
                 <groupId>io.quarkus</groupId>
