--- a/extensions/pom.xml
+++ b/extensions/pom.xml
@@ -137,7 +137,8 @@
         <!-- Logging -->
         <module>logging-json</module>
         <module>logging-sentry</module>
-
+        <module>logging-gelf</module>
+        
         <!-- Templating -->
         <module>qute</module>
     </modules>
