--- a/extensions/agroal/deployment/src/test/resources/application-gcp-datasource.properties
+++ b/extensions/agroal/deployment/src/test/resources/application-gcp-datasource.properties
@@ -1,6 +1,6 @@
 #tag::basic[]
-quarkus.datasource.url = jdbc:postgresql:///database-name
-quarkus.datasource.driver = org.postgresql.Driver
+quarkus.datasource.url=jdbc:h2:tcp://localhost/mem:default
+quarkus.datasource.driver=org.h2.Driver
 quarkus.datasource.username=username-default
 quarkus.datasource.min-size=3
 quarkus.datasource.max-size=13
