--- a/bom/runtime/pom.xml
+++ b/bom/runtime/pom.xml
@@ -126,11 +126,12 @@
         <test-containers.version>1.12.4</test-containers.version>
         <jboss-logging.version>3.3.2.Final</jboss-logging.version>
         <axle-client.version>0.0.10</axle-client.version>
-        <kafka-clients.version>2.2.1</kafka-clients.version>
-        <kafka2.version>2.2.1</kafka2.version>
-        <debezium.version>0.9.5.Final</debezium.version>
+        <kafka-clients.version>2.3.1</kafka-clients.version>
+        <kafka2.version>2.3.1</kafka2.version>
+        <debezium.version>0.10.0.Final</debezium.version>
         <zookeeper.version>3.4.14</zookeeper.version>
-        <scala.version>2.12.8</scala.version>
+        <!-- Scala is used by Kafka so we need to choose a compatible version -->
+        <scala.version>2.12.9</scala.version>
         <tika.version>1.22</tika.version>
         <aws-lambda-java.version>1.1.0</aws-lambda-java.version>
         <aws-lambda-java-events.version>2.2.5</aws-lambda-java-events.version>
