Add banner extension module, default banner, option for user banner, CustomBannerFormatter
add check for null banner supplier

--- a/bom/runtime/pom.xml
+++ b/bom/runtime/pom.xml
@@ -2683,6 +2683,13 @@
                 <artifactId>qute-rxjava</artifactId>
                 <version>${project.version}</version>
             </dependency>
+
+            <!-- Quarkus Banner -->
+            <dependency>
+                <groupId>io.quarkus</groupId>
+                <artifactId>quarkus-banner</artifactId>
+                <version>${project.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 </project>
