--- a/extensions/pom.xml
+++ b/extensions/pom.xml
@@ -145,6 +145,8 @@
         
         <!-- Templating -->
         <module>qute</module>
+        
+        <module>banner</module>
     </modules>
 
     <!-- Unfortunately the config below introduces a build dependency on the maven plugin
