--- a/bom/runtime/pom.xml
+++ b/bom/runtime/pom.xml
@@ -20,7 +20,7 @@
         <opentracing.version>0.31.0</opentracing.version>
         <opentracing-jaxrs.version>0.4.1</opentracing-jaxrs.version>
         <opentracing-web-servlet-filter.version>0.2.3</opentracing-web-servlet-filter.version>
-        <opentracing-tracerresolver.version>0.1.5</opentracing-tracerresolver.version>
+        <opentracing-tracerresolver.version>0.1.8</opentracing-tracerresolver.version>
         <opentracing-concurrent.version>0.2.0</opentracing-concurrent.version>
         <opentracing-jdbc.version>0.0.12</opentracing-jdbc.version>
         <jaeger.version>0.34.0</jaeger.version>
@@ -33,10 +33,10 @@
         <microprofile-rest-client.version>1.3.4</microprofile-rest-client.version>
         <smallrye-config.version>1.5.0</smallrye-config.version>
         <smallrye-health.version>2.1.0</smallrye-health.version>
-        <smallrye-metrics.version>2.3.1</smallrye-metrics.version>
+        <smallrye-metrics.version>2.3.2</smallrye-metrics.version>
         <smallrye-open-api.version>1.1.20</smallrye-open-api.version>
         <smallrye-opentracing.version>1.3.2</smallrye-opentracing.version>
-        <smallrye-fault-tolerance.version>2.1.2</smallrye-fault-tolerance.version>
+        <smallrye-fault-tolerance.version>2.1.3</smallrye-fault-tolerance.version>
         <smallrye-jwt.version>2.0.10</smallrye-jwt.version>
         <smallrye-context-propagation.version>1.0.11</smallrye-context-propagation.version>
         <smallrye-reactive-streams-operators.version>1.0.10</smallrye-reactive-streams-operators.version>
@@ -1484,7 +1484,11 @@
                 <artifactId>junit-jupiter</artifactId>
                 <version>${test-containers.version}</version>
             </dependency>
-
+            <dependency>
+                <groupId>org.testcontainers</groupId>
+                <artifactId>postgresql</artifactId>
+                <version>${test-containers.version}</version>
+            </dependency>
             <dependency>
                 <groupId>org.codehaus.plexus</groupId>
                 <artifactId>plexus-utils</artifactId>
