Fix an artemis-commons dependency convergence issue
We don't have it in Quarkus but we have it in Camel Quarkus. Artemis
dependencies are not consistent.

--- a/bom/runtime/pom.xml
+++ b/bom/runtime/pom.xml
@@ -1324,6 +1324,11 @@
                 <version>${artemis.version}</version>
             </dependency>
             <dependency>
+                <groupId>org.apache.activemq</groupId>
+                <artifactId>artemis-commons</artifactId>
+                <version>${artemis.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>org.apache.httpcomponents</groupId>
                 <artifactId>httpclient</artifactId>
                 <version>${httpclient.version}</version>
