--- a/bom/runtime/pom.xml
+++ b/bom/runtime/pom.xml
@@ -148,7 +148,7 @@
         <jgit.version>5.5.1.201910021850-r</jgit.version>
         <flyway.version>6.1.1</flyway.version>
         <yasson.version>1.0.5</yasson.version>
-        <neo4j-java-driver.version>4.0.0-beta03</neo4j-java-driver.version>
+        <neo4j-java-driver.version>4.0.0</neo4j-java-driver.version>
         <mongo-client.version>3.10.2</mongo-client.version>
         <mongo-reactivestreams-client.version>1.11.0</mongo-reactivestreams-client.version>
         <artemis.version>2.10.1</artemis.version>
