--- a/extensions/pom.xml
+++ b/extensions/pom.xml
@@ -78,6 +78,7 @@
         <module>panache</module>
         <module>hibernate-search-elasticsearch</module>
         <module>elasticsearch-rest-client</module>
+        <module>jsch</module>
         <module>jgit</module>
         <module>kafka-client</module>
         <module>kafka-streams</module>
