Move Elytron Security substitutions to their own module

--- a/extensions/elytron-security/deployment/pom.xml
+++ b/extensions/elytron-security/deployment/pom.xml
@@ -27,6 +27,10 @@
         -->
         <dependency>
             <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-elytron-security-common-deployment</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
             <artifactId>quarkus-vertx-http-deployment</artifactId>
         </dependency>
         <dependency>
