Some housekeeping on our pom files

--- a/bom/runtime/pom.xml
+++ b/bom/runtime/pom.xml
@@ -732,6 +732,11 @@
             </dependency>
             <dependency>
                 <groupId>io.quarkus</groupId>
+                <artifactId>quarkus-test-vault</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.quarkus</groupId>
                 <artifactId>quarkus-logging-json</artifactId>
                 <version>${project.version}</version>
             </dependency>
