--- a/extensions/amazon-lambda-http/maven-archetype/pom.xml
+++ b/extensions/amazon-lambda-http/maven-archetype/pom.xml
@@ -11,7 +11,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>quarkus-amazon-lambda-http-archetype</artifactId>
-    <name>Quarkus - HTTP Amazon Lambda Archetype</name>
+    <name>Quarkus - Amazon Lambda HTTP - Archetype</name>
     <packaging>maven-archetype</packaging>
 
     <build>
