--- a/extensions/amazon-lambda/maven-archetype/pom.xml
+++ b/extensions/amazon-lambda/maven-archetype/pom.xml
@@ -11,7 +11,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>quarkus-amazon-lambda-archetype</artifactId>
-    <name>Quarkus - Amazon Lambda Archetype</name>
+    <name>Quarkus - Amazon Lambda - Archetype</name>
     <packaging>maven-archetype</packaging>
 
     <build>
