--- a/test-framework/derby/pom.xml
+++ b/test-framework/derby/pom.xml
@@ -12,7 +12,7 @@
     </parent>
 
     <artifactId>quarkus-test-derby</artifactId>
-    <name>Quarkus - Test framework - Derby Database Support</name>
+    <name>Quarkus - Test Framework - Derby Database Support</name>
     <dependencies>
         <dependency>
             <groupId>io.quarkus</groupId>
