--- a/ci-templates/jvm-build-steps.yaml
+++ b/ci-templates/jvm-build-steps.yaml
@@ -1,5 +1,6 @@
 parameters:
   jdk: 1.8
+  extra:
 
 steps:
 - task: CacheBeta@0 #we know the very first job will have restored or created this, so this will never write built artifacts to the cache
